#168 Fix UI issue when description of a job post was too long

--- a/fe-career-platform/src/pages/CandidateApplications/CandidateApplications.css
+++ b/fe-career-platform/src/pages/CandidateApplications/CandidateApplications.css
@@ -1,3 +1,6 @@
 .message {
     margin-left:30px;
 }
+.status {
+    width: 200px;
+}
